force-app/main/default/objects/Log__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <label>ClassName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>