force-app/main/default/objects/Log__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception_Type</label>
    <type>TextArea</type>
</CustomField>