force-app/main/default/objects/Log__c/fields/Json_Request__c.field-meta.xml
<CustomField>
    <fullName>Json_Request__c</fullName>
    <label>Json Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>