force-app/main/default/objects/Log__c/fields/Json_Response__c.field-meta.xml
<CustomField>
    <fullName>Json_Response__c</fullName>
    <label>Json Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>