force-app/main/default/objects/Log__c/listViews/integration_logs.listView-meta.xml
<ListView>
    <fullName>integration_logs</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exception_Message__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Http_Method__c</columns>
    <columns>Json_Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ClassName__c</field>
        <operation>equals</operation>
        <value>IntegrationHandler</value>
    </filters>
    <label>integration logs</label>
</ListView>